cluster/core/system/external-secrets/app/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: external-secrets-to-bitwarden-api
  namespace: system
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: bitwarden-api
      app.kubernetes.io/name: bitwarden-api
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: external-secrets
              app.kubernetes.io/name: external-secrets
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: external-secrets
              app.kubernetes.io/name: external-secrets-webhook
